--- a/Style.css
+++ b/Style.css
@@ -14,7 +14,7 @@ body{
 #header{
     width: 100%;
     height: 150vh;
-    background-image: url(images/background.png.png);
+    background-image: url(background.png.png);
     background-size: cover;
     background-position: center;
 }
